Improved light/dark styling and i18n translations

--- a/src/locales/common/en.json
+++ b/src/locales/common/en.json
@@ -103,7 +103,18 @@
 			"none-found-with-filters": "No puzzles found with current filters!",
 			"none-played-yet": "You haven't played any puzzles yet!",
 			"filter": {
-				"any": "Any"
+				"any": "Any",
+				"favorites-only": "Favorites only",
+				"remove-filter": "Remove",
+				"hide-filters": "Hide filters",
+				"show-filters": "Show filters"
+			},
+			"sort": {
+				"sort-by": "Sort by:",
+				"newest-first": "Newest first",
+				"oldest-first": "Oldest first",
+				"time-fastest-first": "Time: fastest first",
+				"time-slowest-first": "Time: slowest first"
 			}
 		},
 		"Overview": {
@@ -121,5 +132,8 @@
 	"NotFound404": {
 		"page-not-found": "Page not found",
 		"you-will-be-redirected-main-menu": "You will now be redirected to the main menu..."
+	},
+	"Paginate": {
+		"amount-per-page": "Amount per page"
 	}
 }
