--- a/src/locales/common/en.json
+++ b/src/locales/common/en.json
@@ -133,7 +133,8 @@
 				"minutes-seconds": "{minutes}m {seconds}s",
 				"hours-minutes": "{hours}h {minutes}m",
 				"days-hours": "{days}d {hours}h"
-			}
+			},
+			"time-played-30-days": "{time} in last 30 days"
 		}
 	},
 	"NotFound404": {
