--- a/src/locales/common/en.json
+++ b/src/locales/common/en.json
@@ -122,7 +122,15 @@
 				"oldest-first": "Oldest first",
 				"time-fastest-first": "Time: fastest first",
 				"time-slowest-first": "Time: slowest first"
-			}
+			},
+			"size": "Size",
+			"time": "Time",
+			"record": {
+				"time-current": "Current time record!",
+				"first-solved": "First time solved",
+				"time-previous": "Previous time record"
+			},
+			"enter-note-here": "Enter note here"
 		},
 		"Overview": {
 			"puzzles-solved": "Puzzles solved",
@@ -134,11 +142,20 @@
 				"hours-minutes": "{hours}h {minutes}m",
 				"days-hours": "{days}d {hours}h"
 			},
-			"time-played-30-days": "{time} in last 30 days"
+			"time-played-30-days": "{time} in last 30 days",
+			"most-played": "Most played",
+			"all-time": "All-time:"
 		},
 		"export-data": "Backup data",
 		"import-stats": "Import stats",
-		"reset-stats": "Reset stats"
+		"reset-stats": "Reset stats",
+		"recently-played": "Recently Played",
+		"view-all": "View all",
+		"play-activity": "Play activity",
+		"overview": {
+			"30d": "(30d)"
+		},
+		"n-puzzles": "{0} puzzles"
 	},
 	"NotFound404": {
 		"page-not-found": "Page not found",
