Rename feature custom-puzzle-create to puzzle-editor

--- a/src/features/puzzle-editor/locales/en.json
+++ b/src/features/puzzle-editor/locales/en.json
@@ -1,5 +1,5 @@
 {
-	"CustomPuzzleInput": {
+	"PuzzleEditor": {
 		"dimensions": {
 			"error": {
 				"incompatible-odd": "The width and height must be both odd or both even.",
