--- a/src/features/puzzle-editor/locales/nl.json
+++ b/src/features/puzzle-editor/locales/nl.json
@@ -51,7 +51,7 @@
 			"no-grid-available": "geen raster beschikbaar"
 		},
 		"tools": {
-			"clear-board": "Bord leegmaken"
+			"clear-board": "Raster leegmaken"
 		},
 		"page-title": "Puzzel Ontwerper",
 		"tools-link-text": "Puzzel ontwerper",
